--- a/WebApp/static/css/map1.css
+++ b/WebApp/static/css/map1.css
@@ -5,6 +5,8 @@
 
 #map3{
     height:90vh;
+    z-index: 99;
+
 }
  #charts,#maps,#details{
   top:30px;
@@ -43,3 +45,4 @@ accent-color:  #0c1a4e;
   background: none;
   box-shadow: none;
 }
+
