--- a/templates/WebApp/map_fullscreen.html
+++ b/templates/WebApp/map_fullscreen.html
@@ -115,81 +115,94 @@
                     <div id="mySidenav" class="sidenav">
                         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
-<div class="accordion" id="accordionExample">
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="headingOne">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-        Layers
-      </button>
-    </h2>
-    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
- <div style="padding-left: 30px">
-                            <p>
-                                <input class="form-check-input" id="chirps_full" type="checkbox"/>
+                        <div class="accordion" id="accordionExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingOne">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                            data-bs-target="#collapseOne" aria-expanded="true"
+                                            aria-controls="collapseOne">
+                                        Layers
+                                    </button>
+                                </h2>
+                                <div id="collapseOne" class="accordion-collapse collapse show"
+                                     aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        <div style="padding-left: 30px">
+                                            <p>
+                                                <input class="form-check-input" id="chirps_full" type="checkbox"/>
 
-                                <label class="form-check-label" for="chirps_full">CHIRPS Layer</label>
+                                                <label class="form-check-label" for="chirps_full">CHIRPS Layer</label>
 
-                            </p>
+                                            </p>
 
-                            <input id="opacity_chirps_full" type="range" value="contrast" max="0.5"
-                                   min="0" step="0.1"/>
-                            <a role="button" href=#" data-bs-toggle="popover" title="CHIRPS"
-                               data-bs-trigger="focus" data-bs-content="Info about chirps"><i
-                                    class="fa-solid fa-circle-info ml-2 info_btn"></i></a>
+                                            <input id="opacity_chirps_full" type="range" value="contrast" max="0.5"
+                                                   min="0" step="0.1"/>
+                                            <a role="button" href=#" data-bs-toggle="popover" title="CHIRPS"
+                                               data-bs-trigger="focus" data-bs-content="Info about chirps"><i
+                                                    class="fa-solid fa-circle-info ml-2 info_btn"></i></a>
 
-                            <p><input class="form-check-input" id="esi_full" type="checkbox"/>
-                                <label class="form-check-label" for="esi_full">ESI Layer</label>
+                                            <p><input class="form-check-input" id="esi_full" type="checkbox"/>
+                                                <label class="form-check-label" for="esi_full">ESI Layer</label>
 
-                            </p>
+                                            </p>
 
-                            <input id="opacity_esi_full" type="range" value="contrast" max="0.5" min="0"
-                                   step="0.1"/>
-                            <a role="button" href=#" data-bs-toggle="popover"
-                               data-bs-trigger="focus" title="ESI"
-                               data-bs-content="Info about esi"><i
-                                    class="fa-solid fa-circle-info ml-2 info_btn"></i></a>
-                        </div>      </div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="headingTwo">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-        Basemaps
-      </button>
-    </h2>
-    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-                  This accordion is under construction
+                                            <input id="opacity_esi_full" type="range" value="contrast" max="0.5" min="0"
+                                                   step="0.1"/>
+                                            <a role="button" href=#" data-bs-toggle="popover"
+                                               data-bs-trigger="focus" title="ESI"
+                                               data-bs-content="Info about esi"><i
+                                                    class="fa-solid fa-circle-info ml-2 info_btn"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingTwo">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                            data-bs-target="#collapseTwo" aria-expanded="false"
+                                            aria-controls="collapseTwo">
+                                        Basemaps
+                                    </button>
+                                </h2>
+                                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                     data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        This accordion is under construction
 
-      </div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="headingThree">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-        Legends
-      </button>
-    </h2>
-    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-        This accordion is under construction
-      </div>
-    </div>
-  </div>
-      <div class="accordion-item">
-    <h2 class="accordion-header" id="headingFour">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-        Search
-      </button>
-    </h2>
-    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
-      <div class="accordion-body" id="location_full">
-          <p>Enter location name and hit Enter to recenter the map</p>
-      </div>
-    </div>
-  </div>
-</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingThree">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                            data-bs-target="#collapseThree" aria-expanded="false"
+                                            aria-controls="collapseThree">
+                                        Legends
+                                    </button>
+                                </h2>
+                                <div id="collapseThree" class="accordion-collapse collapse"
+                                     aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        This accordion is under construction
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingFour">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                            data-bs-target="#collapseFour" aria-expanded="false"
+                                            aria-controls="collapseFour">
+                                        Search
+                                    </button>
+                                </h2>
+                                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                                     data-bs-parent="#accordionExample">
+                                    <div class="accordion-body" id="location_full">
+                                        <p>Enter location name and hit Enter to recenter the map</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div id="map3" style="height:83vh;"></div>
 
