--- a/templates/WebApp/map_fullscreen.html
+++ b/templates/WebApp/map_fullscreen.html
@@ -198,7 +198,7 @@
                                 <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                                      data-bs-parent="#accordionExample">
                                     <div class="accordion-body" id="location_full">
-                                        <p>Enter location name and hit Enter to recenter the map</p>
+                                        <p class="p-3">Enter location name and hit Enter to recenter the map</p>
                                     </div>
                                 </div>
                             </div>
