--- a/staticfiles/css/map1.css
+++ b/staticfiles/css/map1.css
@@ -74,7 +74,7 @@ accent-color:  #0c1a4e;
 }
 #basemaps{
      overflow-y: scroll;
-    height: 25vh;
+    height: 20vh;
 }
 .leaflet-control-geocoder .leaflet-control-geocoder-alternatives a {
 font-size: medium;
@@ -86,4 +86,7 @@ position: inherit;
 }
 .accordion-body {
 height: 35vh;
+}
+.img-thumbnail{
+    height: 150px;
 }
